--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,3 +1,6 @@
+<li><%= link_to "Account Settings", edit_user_registration_path %></li>
+
+
 <nav class="navbar navbar-static-top navbar-default" role="navigation">
   <!-- <div class="container"> -->
     <!-- Brand and toggle get grouped for better mobile display -->
