--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,10 +1,10 @@
 <div class="panel panel-default">
   <div class="panel-heading">
-     <h1>Sign up</h1>
-    </div>
+    <h1>Sign up</h1>
+  </div>
 
-  <div class="panel-body"
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  <div class="panel-body">
+    <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
       <%= devise_error_messages! %>
 
       <div class="form-group">
